--- a/src/html/jsx/index.html
+++ b/src/html/jsx/index.html
@@ -4,6 +4,12 @@
 <head>
   <meta charset="UTF-8" />
   <title>React</title>
+  <style>
+    .cssName{
+      color:#f60
+    }
+  </style>
+
 </head>
 
 <body>
@@ -17,11 +23,11 @@
   <!-- Load React. -->
   <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
   <!-- 核心库 -->
-  <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
+  <script src="../reactjs/react.development.js" ></script>
   <!-- react 操作dom -->
-  <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+  <script src="../reactjs/react-dom.development.js" ></script>
   <!-- 加载Babel 编译jsx用的-->
-  <script src="https://unpkg.com/babel-standalone@6.26.0/babel.min.js" crossorigin></script>
+  <script src="../babel/babel.min.js" ></script>
   <!-- Load our React component. -->
   <script src="./like_button.js"></script>
   <script src="./react_app.js"></script>
@@ -40,8 +46,16 @@
     const vdomrc = React.createElement('h4', { id: 'rc' }, "虚拟dom，", React.createElement('span', {}, 'rc创建虚拟dom'))
     const copyVd = React.cloneElement(vdomrc, { id: 'rc2' })
     ReactDOM.render(vdomrc, document.getElementById("vdomrc"))
-    ReactDOM.render(copyVd, document.getElementById("copyVd"))
-
+    const rdom= ReactDOM.render(copyVd, document.getElementById("copyVd"))
+  </script>
+  <script type="text/babel">
+    const myId="myreactId"
+    const myText="你好!hello,My world"
+    const vdom=(
+      <h4 className="cssName" id={myId}>{myText.toLocaleUpperCase()}</h4>
+    )
+    
+    ReactDOM.render(vdom, document.getElementById("vdom"))
   </script>
 </body>
 
