--- a/src/html/jsx/index.html
+++ b/src/html/jsx/index.html
@@ -50,7 +50,7 @@
   </script>
   <script type="text/babel">
     const myId="myreactId"
-    const myText="你好心累的gitLab"
+    const myText="你好心累的gitLab心累"
     const vdom=(
       <h4 className="cssName" id={myId}>{myText.toLocaleUpperCase()}</h4>
     )
